# mnemo

./: 1  AGENTS.md  Cargo.toml  LICENSE  README.md  rust-toolchain.toml
.github/workflows/: ci.yml
docs/: 2026-05-01-mnemo-agent-memory-database-design.md  2026-05-01-mnemo-v0.1-implementation-plan.md  MCP-OPENCODE-INTEGRATION.md  ai-agent-memory-database.md  ai-agent-memory-existing-systems.md  ai-database-pain-points.md  implicit-retrieval-design.md  letta-deep-dive.md  mem0-deep-dive.md
docs/superpowers/plans/: 2025-05-02-bind-retrieval-fix-plan-a.md  2025-05-02-bind-retrieval-fix-plan-b.md  2025-05-02-lifecycle-hooks-implementation-plan.md  (+2 more)
examples/: singapore_facts_demo.py
scripts/: build-release.sh
src/: lib.rs  main.rs
src/context/: mod.rs  query.rs  query_expansion.rs
src/embed/: gateway.rs  mod.rs  provider.rs
src/extract/: mod.rs
src/lifecycle/: config.rs  decay.rs  engine.rs  hook.rs  mod.rs  recall.rs
src/mcp/: mod.rs
src/protocol/: commands.rs  mod.rs  parser.rs  response.rs
src/repl/: mod.rs  runner.rs
src/store/: config.rs  db.rs  memory.rs  mod.rs  vector.rs
src/tier/: manager.rs  mod.rs  working.rs
tests/: embed_provider_test.rs  extract_test.rs  integration_test.rs  lifecycle_integration_test.rs  lifecycle_test.rs  mcp_test.rs  mcp_warmup_test.rs  protocol_commands_test.rs  protocol_parser_test.rs  protocol_response_test.rs  recall_expansion.rs  store_config_test.rs  store_db_test.rs  store_memory_test.rs  tier_manager_test.rs  tier_working_test.rs  vector_fallback_test.rs  vector_hybrid_test.rs  vector_search_test.rs
(+4 files in other folders)
